# slater

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: proposal_user-input-pause-design.md  user-guide.md
docs/adr/: 001-dynamic-phase-enums.md  002-eager-fact-application.md  003-statestore-history-consistency.md  004-emission-spec-builder-pattern.md
docs/issues/: 001-plan-ready-scope-causes-infinite-loop.md  002-plan-fact-scope-causes-keyerror.md  003-procedure-succeeded-stuck-loop.md
docs/proposals/: 001-user-input-pause-design.md  002-fact-scope-validator.md
slater/: __main__.py  actions.py  config.py  context.py  controller.py  phases.py  policies.py  procedures.py  spec.py  state.py  types.py  validation.py
tests/fixtures/: __init__.py  test-slater.yaml
tests/unit/: test_config.py  test_controller.py  test_phases.py  test_spec.py  test_state.py  test_types.py
